kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: mi-example
  name: mi-example-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: mi-example.home
    http:
      paths:
      - backend:
          service:
            name: mi-example-service
            port:
              number: 8080
        path: /
        pathType: Prefix
